@@ -1,3 +1,9 @@
+2005-08-05  Richard Henderson  <rth@redhat.com>
+
+        PR 21728
+        * tree-cfg.c (remove_bb): Transmute DECL_NONLOCAL labels into
+        FORCED_LABEL labels.
+
 2005-08-04  Richard Henderson  <rth@redhat.com>
 
         PR 21529
